# esp_tensorflow_fmnist

./: CMakeLists.txt  Makefile  README.md  sdkconfig
components/tfmicro/: CMakeLists.txt
main/: CMakeLists.txt  app_camera.c  app_httpd.c  app_main.c  app_tensorflow.cc  app_wifi.c  model_settings.c
main/include/: app_camera.h  app_tensorflow.h  create_lookup.py  model_data.h  model_settings.h  normalisation_lookup.h
main/tf_model/: model_data_28_28.cc
main/www/: index.html
